--- a/HotelObliOpg/MainPage.xaml
+++ b/HotelObliOpg/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="436,255,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Knap" HorizontalAlignment="Left" Margin="436,255,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
