--- a/HotelObliOpg/MainPage.xaml
+++ b/HotelObliOpg/MainPage.xaml
@@ -1,18 +1,25 @@
 ﻿<Page
-    x:Class="HotelObliOpg.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HotelObliOpg"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:HotelObliOpg.ViewModel"
+    x:Class="HotelObliOpg.MainPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="button" Content="Opret Gæst
-                " HorizontalAlignment="Left" Margin="436,255,0,0" VerticalAlignment="Top"/>
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="134" Margin="77,65,0,0" VerticalAlignment="Top" Width="179"/>
-        <Button x:Name="button1" Content="Slet" HorizontalAlignment="Left" Margin="191,255,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="button2" Content="Rediger" HorizontalAlignment="Left" Margin="77,255,0,0" VerticalAlignment="Top"/>
+        <Grid.DataContext>
+            <ViewModel:GuestViewModel/>
+        </Grid.DataContext>
+        <Button x:Name="button" Content="Opret Gæst" HorizontalAlignment="Left" Margin="468,251,0,0" VerticalAlignment="Top" Command="{Binding CreateGuestCommand}"/>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="134" Margin="77,52,0,0" VerticalAlignment="Top" Width="230" ItemsSource="{Binding GuestCatalogSingleton.GuestsCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedGuest, Mode=TwoWay}"/>
+        <Button x:Name="button1" Content="Slet" HorizontalAlignment="Left" Margin="195,233,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="button2" Content="Rediger" HorizontalAlignment="Left" Margin="77,233,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="button3" Content="Hent Gæst" HorizontalAlignment="Left" Margin="286,235,0,0" VerticalAlignment="Top" Command="{Binding GetGuestCommand}"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="481,52,0,0" TextWrapping="Wrap" Text="{Binding Guest_No, Mode=TwoWay}" VerticalAlignment="Top" PlaceholderText="Guest_No"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="481,115,0,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top" PlaceholderText="Name"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="481,178,0,0" TextWrapping="Wrap" Text="{Binding Address, Mode=TwoWay}" VerticalAlignment="Top" PlaceholderText="Address"/>
 
     </Grid>
 </Page>
